other/require-imagepullsecrets/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: nginx
    image: ghcr.io/kyverno/test-verify-image:unsigned
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: nginx
    image: ghcr.io/kyverno/test-verify-image:unsigned
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox
    image: quay.io/quay/busybox:1.35
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
