other/require-imagepullsecrets/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  imagePullSecrets:
  - name: myregistrykey
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: nginx
    image: ghcr.io/kyverno/test-verify-image:unsigned
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: nginx
    image: ghcr.io/kyverno/test-verify-image:unsigned
  - name: busybox
    image: busybox:1.35
  imagePullSecrets:
  - name: myregistrykey
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: nginx
    image: nginx:1.12
  - name: busybox
    image: quay.io/quay/busybox
  imagePullSecrets:
  - name: myregistrykey
