other/require-imagepullsecrets/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: nginx
        image: ghcr.io/kyverno/test-verify-image:unsigned
